--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,10 +15,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v5
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
@@ -28,24 +32,18 @@ jobs:
       - name: Install deps
         run: bun install --frozen-lockfile
 
-      - name: Build
-        run: bun run build  # produces ./dist
+        run: bun run build  
 
-      # (Optional) SPA fallback for GitHub Pages
-      - name: Add 404.html fallback
-        run: cp dist/index.html dist/404.html
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
-          path: dist
+          # Upload dist folder
+          path: './dist'
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
+
